Re-enabled materials in animation skinning/morph example for testing

--- a/examples/webgl_animation_skinning_morph.html
+++ b/examples/webgl_animation_skinning_morph.html
@@ -227,13 +227,13 @@
 					m.color.setHSL( 0.6, 0, 0.6 );
 					m.ambient.copy( m.color );
 
-					//m.map = map;
-					//m.envMap = envMap;
-					//m.bumpMap = bumpMap;
-					//m.bumpScale = 2;
+					m.map = map;
+					m.envMap = envMap;
+					m.bumpMap = bumpMap;
+					m.bumpScale = 2;
 
-					//m.combine = THREE.MixOperation;
-					//m.reflectivity = 0.75;
+					m.combine = THREE.MixOperation;
+					m.reflectivity = 0.75;
 
 					m.wrapAround = true;
 
